source code button mobile fix?

--- a/styles.css
+++ b/styles.css
@@ -242,7 +242,7 @@ button:active {
 		scale: 120%;
 	}
 	.github a div {
-		font-size: 1.6rem;
+		font-size: 1.4rem;
 		margin: auto;
 		padding: 1rem;
 	}
